UI: Annotate Tool - Missing Layer and Color Parameters #106641

Closed
opened 2023-04-06 20:53:29 +02:00 by Grigoriy Titaev · 14 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 3.5.0, 3.6.0 (2023-04-06)

Short description of error
In some places, layer and color parameters are missing:
Annotate Tool.png

**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.5.0, 3.6.0 (2023-04-06) **Short description of error** In some places, layer and color parameters are missing: ![Annotate Tool.png](/attachments/9efdd985-d44d-44e3-85a0-fab124b8c262)
Grigoriy Titaev added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-06 20:53:30 +02:00
Member

Hi, thanks for the report. Can confirm.
I think this can be improved to maintain consistency.

Hi, thanks for the report. Can confirm. I think this can be improved to maintain consistency.
Pratik Borhade added
Module
User Interface
Status
Confirmed
Meta
Good First Issue
and removed
Status
Needs Triage
labels 2023-04-07 05:52:19 +02:00

Also, these parameters disappear when you delete all layers.

Annotate Tool - Color and Layer Disappear.png

Also, these parameters disappear when you delete all layers. ![Annotate Tool - Color and Layer Disappear.png](/attachments/1cfd28a7-b290-4b87-a6be-d692eefa8e5e)

does anyone working on this issue ?

does anyone working on this issue ?
Member

Hi, don't think so. Feel free to claim the task and work on it.

Hi, don't think so. Feel free to claim the task and work on it.

@Mohit-Sharma-2 How far have you reached on this issue?

@Mohit-Sharma-2 How far have you reached on this issue?

If @Mohit-Sharma-2 is not working on it, then @PratikPB2123 Can I pick it up?

If @Mohit-Sharma-2 is not working on it, then @PratikPB2123 Can I pick it up?

@Abhiyankar-Shakti Yes you can work on it .

@Abhiyankar-Shakti Yes you can work on it .

@PratikPB2123 It would be helpful if you can guide me through the technicalities of this issue.

@PratikPB2123 It would be helpful if you can guide me through the technicalities of this issue.
Contributor

Hello, I see that there are no updates on this one for quite some time, so I was thinking I might pick it up. @Abhiyankar-Shakti I suppose you're not working on it anymore?

I've actually fixed the issues already, except this one:

Also, these parameters disappear when you delete all layers.

Annotate Tool - Color and Layer Disappear.png

I'm new to Blender, but I would expect these to disappear if there is no annotation layer available. The only difference that I see compared to the state before drawing anything with the pencil is that there are warnings printed out to the console on each viewport update (until you draw something else again, which recreates the layer):

WARN (bpy.rna): D:\Work\Projects\blender-git\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '-1' matches no enum in 'GreasePencilLayers', '(null)', 'active_note'

I'll need to investigate that further.

Hello, I see that there are no updates on this one for quite some time, so I was thinking I might pick it up. @Abhiyankar-Shakti I suppose you're not working on it anymore? I've actually fixed the issues already, except this one: > Also, these parameters disappear when you delete all layers. > > ![Annotate Tool - Color and Layer Disappear.png](/attachments/1cfd28a7-b290-4b87-a6be-d692eefa8e5e) I'm new to Blender, but I would expect these to disappear if there is no annotation layer available. The only difference that I see compared to the state before drawing anything with the pencil is that there are warnings printed out to the console on each viewport update (until you draw something else again, which recreates the layer): `WARN (bpy.rna): D:\Work\Projects\blender-git\blender\source\blender\python\intern\bpy_rna.cc:1349 pyrna_enum_to_py: current value '-1' matches no enum in 'GreasePencilLayers', '(null)', 'active_note'` I'll need to investigate that further.
Contributor

I'll create a pull request for this bug as soon as I fix up some small issue and run the tests.

Warnings when the last layer is deleted should be a separate issue. Doesn't look like it already exists, so I'll create a new one and try to fix it. From what I've seen context.annotation_data isn't set to null when the last layer is deleted.

I'll create a pull request for this bug as soon as I fix up some small issue and run the tests. Warnings when the last layer is deleted should be a separate issue. Doesn't look like it already exists, so I'll create a new one and try to fix it. From what I've seen context.annotation_data isn't set to null when the last layer is deleted.
Contributor

Also, I've noticed that none of the Node editors have a Tool Settings option in the View menu, so it can't be shown for these. Is this by design?

image

Also, I've noticed that none of the Node editors have a Tool Settings option in the View menu, so it can't be shown for these. Is this by design? ![image](/attachments/a17f3b0b-6dfc-4998-828f-a9e5f3f68125)

is the issue solved or still open?

is the issue solved or still open?
Contributor

I created the pull request, it's still not reviewed.

As for the missing Tool Settings menu item in Node editors, it should be a separate bug.

I created the pull request, it's still not reviewed. As for the missing Tool Settings menu item in Node editors, it should be a separate bug.
Contributor

Missing Tool Settings menu item in Node editors isn't a bug after all: #114205 (comment)

Missing Tool Settings menu item in Node editors isn't a bug after all: https://projects.blender.org/blender/blender/issues/114205#issuecomment-1053716
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-28 12:15:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106641
No description provided.