source/blender/editors/gpencil_legacy/gpencil_utils.cc
@@ -124,7 +124,6 @@ bGPdata **ED_annotation_data_get_pointers_direct(ID *screen_id,
     SpaceLink *sl = static_cast<SpaceLink *>(area->spacedata.first);
 
     switch (area->spacetype) {
-      case SPACE_PROPERTIES: /* properties */
       case SPACE_INFO:       /* header info */
       {
         return nullptr;
@@ -132,6 +131,7 @@ bGPdata **ED_annotation_data_get_pointers_direct(ID *screen_id,
 
       case SPACE_TOPBAR: /* Top-bar */
       case SPACE_VIEW3D: /* 3D-View */
+      case SPACE_PROPERTIES: /* properties */
       {
         if (r_ptr) {
           *r_ptr = RNA_id_pointer_create(&scene->id);
