scripts/startup/bl_ui/properties_grease_pencil_common.py
@@ -368,7 +368,7 @@ class AnnotationDataPanel:
     bl_options = {'DEFAULT_CLOSED'}
 
     def draw_header(self, context):
-        if context.space_data.type not in {'VIEW_3D', 'TOPBAR', 'SEQUENCE_EDITOR'}:
+        if context.space_data.type not in {'VIEW_3D', 'TOPBAR', 'SEQUENCE_EDITOR', 'IMAGE_EDITOR', 'NODE_EDITOR', 'PROPERTIES'}:
             self.layout.prop(context.space_data, "show_annotation", text="")
 
     def draw(self, context):
